--- a/client/index.html
+++ b/client/index.html
@@ -49,11 +49,24 @@
 						<canvas class="jr-profile_picture"></canvas>
 					</div>
 					<div>
-						<div class="jr-profile_name"><div>
-						<div class="jr-profile_active"><div>
+						<div class="jr-profile_name">
+							<span contenteditable data-text="guest">guest</span>
+						</div>
+						<div class="jr-profile_active">active on chat</div>
 					</div>
 				</div>
-				<div class="jr-menbers"></div>
+				<div class="jr-onlines">
+					<div><b>0</b>&#160;MENBER</div>
+					<div><b>0</b>&#160;ADMIN</div>
+				</div>
+				<div class="jr-menbers">
+					<div>
+						<div class="jr-menbers_picture">
+							<img src="http://placehold.it/32x32" title="simple image placeholder">
+						</div>
+						<div class="jr-menbers_name">guest</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
