--- a/client/test.html
+++ b/client/test.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"><link rel="stylesheet" href="style.css"></head><body><script>(function(a){var b=a.createElement('script');b.async=!0,b.src='script.js',a.body.appendChild(b)})(document)</script></body></html>
+<!DOCTYPE html>
+<html>
+     <head>
+       <meta charset="utf-8"><meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+       <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <script>
+        (function(a){var b=a.createElement('script');b.async=!0,b.src='script.js',a.body.appendChild(b)})(document)
+      </script>
+    </body>
+</html>
